objects/ssot__MentoringProfile__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Mentoring Profile Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMentee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mentee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedRecordId__c</fullName>
        <label>Related Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedRecordObject__c</fullName>
        <label>Related Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SummaryText__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819538718_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MentoringProfile_RelatedRecordId_map_rel</label>
        <referenceTo>ssot__ProviderOffering__dlm</referenceTo>
        <relationshipLabel>MentoringProfile_RelatedRecordId_map_rel</relationshipLabel>
        <relationshipName>rel_1719819538718_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819619047_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MentoringProfile_RelatedRecordId_map_rel</label>
        <referenceTo>ssot__ProgramEnrollment__dlm</referenceTo>
        <relationshipLabel>MentoringProfile_RelatedRecordId_map_rel</relationshipLabel>
        <relationshipName>rel_1719819619047_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291155928_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MentoringProfile_ContactId_map_Indiv_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>MentoringProfile_ContactId_map_Indiv_rel</relationshipLabel>
        <relationshipName>rel_1720291155928_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>